src/isort/snapshots/ruff__isort__tests__force_to_top_third_party.py.snap
---
source: src/isort/mod.rs
expression: checks
---
- kind: UnsortedImports
  location:
    row: 1
    column: 0
  end_location:
    row: 17
    column: 0
  fix:
    patch:
      content: "import os\nfrom contextlib import contextmanager\nfrom logging import getLogger\nfrom typing import Optional, Union\nfrom unittest.mock import patch\n\nfrom local_module.constants import BAR_CONSTANT, FOO_CONSTANT, STAR_CONSTANT\nfrom local_module.plugins.third_party_module.constants import CONSTANT_ENV\nfrom local_module.plugins.third_party_module.exceptions import ThirdPartyModuleException\nfrom third_party_module import API, AnotherAPI\nfrom third_party_module.exceptions import ThirdPartyRestException\n"
      location:
        row: 1
        column: 0
      end_location:
        row: 17
        column: 0

